--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="pack-unit-row">
           <div class="form-field">
             <label>📦 Упаковка:</label>
-            <input type="number" id="newProductPack" min="1" value="10" step="1">
+            <input type="number" id="newProductPack" min="1" value="1" step="1">
           </div>
           <div class="form-field">
             <label>📏 Ед. изм.:</label>
@@ -65,7 +65,7 @@
         
         <div class="form-field">
           <label>💰 Цена (₽):</label>
-          <input type="number" id="newProductPrice" min="0" step="0.01" value="120" placeholder="120.00">
+          <input type="number" id="newProductPrice" min="0" step="0.01" placeholder="0.00">
         </div>
       </div>
       
@@ -74,19 +74,19 @@
         <div class="nutrition-grid-new">
           <div class="nutrition-item">
             <div class="nutrition-label">Белки (г)</div>
-            <input type="number" id="newProtein" min="0" step="0.1" value="0" placeholder="12.0" class="nutrition-input">
+            <input type="number" id="newProtein" min="0" step="0.1" placeholder="0.0" class="nutrition-input">
           </div>
           <div class="nutrition-item">
             <div class="nutrition-label">Жиры (г)</div>
-            <input type="number" id="newFat" min="0" step="0.1" value="0" placeholder="11.0" class="nutrition-input">
+            <input type="number" id="newFat" min="0" step="0.1" placeholder="0.0" class="nutrition-input">
           </div>
           <div class="nutrition-item">
             <div class="nutrition-label">Углеводы (г)</div>
-            <input type="number" id="newCarbs" min="0" step="0.1" value="0" placeholder="0.7" class="nutrition-input">
+            <input type="number" id="newCarbs" min="0" step="0.1" placeholder="0.0" class="nutrition-input">
           </div>
           <div class="nutrition-item">
             <div class="nutrition-label">Ккал</div>
-            <input type="number" id="newCalories" min="0" step="1" value="0" placeholder="157" class="nutrition-input">
+            <input type="number" id="newCalories" min="0" step="1" placeholder="0" class="nutrition-input">
           </div>
         </div>
       </div>
@@ -109,7 +109,7 @@
     <div style="background: #fffaf0; padding: 20px; border-radius: 10px; border: 1px solid #e6ccb2; margin-bottom: 20px;">
       <div style="margin-bottom: 16px; display: flex; align-items: center;">
         <label style="width: 120px;">👨‍🍳 Работа:</label>
-        <input type="number" id="laborValue" min="0" step="0.01" value="0" placeholder="0.00" style="width: 120px;">
+        <input type="number" id="laborValue" min="0" step="0.01" placeholder="0.00" style="width: 120px;">
         <select id="laborType" style="width: 80px; margin-left: 10px;">
           <option value="fixed">₽</option>
           <option value="percent">%</option>
@@ -118,12 +118,12 @@
 
       <div style="margin-bottom: 16px; display: flex; align-items: center;">
         <label style="width: 120px;">🚚 Доставка:</label>
-        <input type="number" id="delivery" min="0" step="0.01" value="0" placeholder="0.00" style="width: 120px;"> ₽
+        <input type="number" id="delivery" min="0" step="0.01" placeholder="0.00" style="width: 120px;"> ₽
       </div>
 
       <div style="margin-bottom: 16px; display: flex; align-items: center;">
         <label style="width: 120px;">🎁 Упаковка:</label>
-        <input type="number" id="packaging" min="0" step="0.01" value="0" placeholder="0.00" style="width: 120px;"> ₽
+        <input type="number" id="packaging" min="0" step="0.01" placeholder="0.00" style="width: 120px;"> ₽
       </div>
 
       <button id="saveMarkupBtn" style="margin-top: 10px; width: 100%; justify-content: center;">💾 Сохранить настройки</button>
